# nexa-dir2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.ko.md  LICENSE.md  README.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/nexa-app/: Cargo.toml  build.rs
crates/nexa-app/assets/: README.md
crates/nexa-app/assets/rename/: README.md
crates/nexa-app/assets/toolbar/: README.md
crates/nexa-app/examples/: preview_image.rs
crates/nexa-app/lang/: en.lang  ja.lang  ko.lang
crates/nexa-app/src/: about.rs  bulkrename.rs  clipboard.rs  config.rs  conpty.rs  ctldemo.rs  dialog.rs  dnd.rs  dw.rs  gdi.rs  i18n.rs  icon.rs  icons.rs  launcher.rs  main.rs  nav.rs  ordereditor.rs  panel.rs  pathinput.rs  prefs.rs  recycle.rs  shellmenu.rs  shellpath.rs  source.rs  svg.rs  tip.rs  uia.rs  watcher.rs  win.rs
crates/nexa-app/src/ctl/: base.rs  button.rs  checkbox.rs  combobox.rs  droplist.rs  fontbox.rs  gdipctx.rs  grid.rs  groupcard.rs  iconbutton.rs  label.rs  menubutton.rs  mod.rs  ordertree.rs  searchbox.rs  segmented.rs  spin.rs  style.rs  textbox.rs
crates/nexa-core/: Cargo.toml
crates/nexa-core/src/: lib.rs
crates/nexa-gui/: Cargo.toml
crates/nexa-gui/src/: columns.rs  draw.rs  edit.rs  event.rs  geom.rs  lib.rs  theme.rs  typeahead.rs  widget.rs
crates/nexa-gui/src/widgets/: chrome.rs  dock.rs  menubar.rs  mod.rs  pathbar.rs  rows.rs  tabbar.rs
crates/nexa-ops/: Cargo.toml
crates/nexa-ops/src/: batch_rename.rs  history.rs  lib.rs
crates/nexa-term/: Cargo.toml
crates/nexa-term/src/: lib.rs
crates/nexa-tree/: Cargo.toml
crates/nexa-tree/src/: lib.rs
crates/nexa-vfs/: Cargo.toml
crates/nexa-vfs/src/: lib.rs
docs/: 00-vision.md  01-architecture.md  02-roadmap.md  05-requirements.md  06-adr-0001-stack.md  07-adr-0002-rendering.md  08-adr-0003-shell-context-menu.md  09-adr-0004-preview-plugins.md  10-decision-record.md  11-dev-environment.md  12-packaging-single-exe.md  15-dev-methodology.md  16-doc-git-conventions.md  18-build-and-test.md  19-parity-gap.md  20-session-coalescing.md  21-distribution.md  22-batch-rename-v2.md  23-cross-platform-feasibility.md  BRANCHES.md  DEVLOG.md  MILESTONES.md  README.md  STATUS.md  TODO.md
docs/ctl/: README.md  button.md  checkbox.md  combobox.md  fontbox.md  grid.md  groupcard.md  iconbutton.md  label.md  menubutton.md  overview.md  searchbox.md  segmented.md  spin.md  textbox.md
docs/journal/: 2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-24.md
docs/wiki/: Home.md  README.md  _Footer.md  _Sidebar.md  개발-빌드와-테스트.md  개발-아키텍처.md  개발-여정.md  개발-컴포넌트.md  개발-플러그인.md  기능-개요.md  기능-도구모음과-메뉴.md  기능-설정.md  기능-일괄-이름변경.md  기능-탐색.md  기능-파일-목록과-보기.md  기능-파일-조작.md  기능-패널과-탭.md  기능-하단-도크.md  설계-결정.md  설치와-다운로드.md  키보드-단축키.md  프로젝트-소개.md
installer/: nexa.iss
packaging/chocolatey/: pack-and-push.ps1
packaging/chocolatey/nexa-dir/: nexa-dir.nuspec
packaging/chocolatey/nexa-dir.portable/: nexa-dir.portable.nuspec
packaging/chocolatey/nexa-dir.portable/tools/: VERIFICATION.txt  chocolateyinstall.ps1
packaging/chocolatey/nexa-dir/tools/: VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/winget/0.8.1/: SosomLab.NexaDir.installer.yaml  SosomLab.NexaDir.locale.en-US.yaml
scripts/: budget-b3.ps1
