# Nexa Dir 2 — 올 러스트 워크스페이스 (포터블 단일 exe)
# 코어는 맥/Windows/Linux 빌드·테스트, nexa-app의 Windows부는 #[cfg(windows)] 격리.
[workspace]
resolver = "2"
members = [
  "crates/nexa-core",
  "crates/nexa-vfs",
  "crates/nexa-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = ["Sangyong Bae <kiros33@gmail.com>"]
repository = "https://github.com/SosomLab/nexa-dir2"
homepage = "https://sosomlab.com"

[workspace.dependencies]
nexa-core = { path = "crates/nexa-core" }
nexa-vfs = { path = "crates/nexa-vfs" }
nexa-tree = { path = "crates/nexa-tree" }

# 릴리스 = 예산 B2(단일 exe ≤10MB) 최적화 (docs/18 §3)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
