# Nexa Dir — 올 러스트 워크스페이스 (포터블 단일 exe)
# 코어는 맥/Windows/Linux 빌드·테스트, nexa-app의 Windows부는 #[cfg(windows)] 격리.
[workspace]
resolver = "2"
members = [
  "crates/nexa-core",
  "crates/nexa-vfs",
  "crates/nexa-tree",
  "crates/nexa-gui",
  "crates/nexa-ops",
  "crates/nexa-term",
  "crates/nexa-app",
]

[workspace.package]
# 배포 버전과 일치(exe VERSIONINFO·@app). 릴리스 태그와 동기 유지.
version = "0.8.1"
edition = "2021"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = ["Sangyong Bae <kiros33@gmail.com>"]
repository = "https://github.com/SosomLab/nexa-dir2"
homepage = "https://sosomlab.com"

# 워크스페이스 공통 린트(X-16) — 각 크레이트 [lints] workspace = true로 상속.
# CI/로컬 clippy 기준 일원화(개별 크레이트 누락 방지).
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow" # Win32 wndproc 전반 — 함수 단위 unsafe 유지
[workspace.lints.clippy]
redundant_clone = "warn"
inefficient_to_string = "warn"

[workspace.dependencies]
nexa-core = { path = "crates/nexa-core" }
nexa-vfs = { path = "crates/nexa-vfs" }
nexa-tree = { path = "crates/nexa-tree" }
nexa-gui = { path = "crates/nexa-gui" }
nexa-ops = { path = "crates/nexa-ops" }
nexa-term = { path = "crates/nexa-term" }

# 릴리스 = 예산 B2(단일 exe ≤10MB) 최적화 (docs/18 §3)
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
