[package]
name = "nexa-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Nexa Dir 2 앱 (Win32 창·메시지 루프·조립)"

[dependencies]
nexa-gui = { workspace = true }

[target."cfg(windows)".dependencies]
windows-core = "0.62.2" # #[implement] 매크로 전개가 ::windows_core 경로를 참조
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_DirectWrite", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader"] }
