[package]
name = "nexa-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Nexa Dir 2 앱 (Win32 창·메시지 루프·조립)"

[dependencies]
nexa-core = { workspace = true }
nexa-gui = { workspace = true }
nexa-ops = { workspace = true }
nexa-tree = { workspace = true }

[target."cfg(windows)".dependencies]
windows-core = "0.62.2" # #[implement] 매크로 전개가 ::windows_core 경로를 참조
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_DirectWrite", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Ime", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_System_Registry", "Win32_System_Time", "Win32_System_Threading", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_Accessibility", "Win32_Globalization"] }
